--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,113 @@
 /* Main StyleSheet | SCSS > Minified CSS > bundle.js */
 @import "bootstrap";
 @import "mixins";
+
+html {
+  --bgl:  #F8F9FA;
+  --txtl: #030617;
+  --bgd:  #030617;
+  --txtd: #F8F9FA;
+  --tint: #0cc9e7;
+  &[data-theme='dark'] {
+    --bgl:  #030617;
+    --txtl: #F8F9FA;
+    --bgd:  #F8F9FA;
+    --txtd: #030617;
+  } &.transition, .transition *, .transition *::before, .transition*::after {
+    transition: all 750ms !important;
+    transition-delay: 0 !important;
+  }
+  body {
+    background-color: var(--bgd);
+    h1, h2, h3, h4, h5, h6, p, small { color: var(--txtd); }
+    h1 { @include responsive_fontsize; }
+  }
+}
+
+.navbar {
+  .navbar-brand { padding-left: .7rem; color: var(--txtd); }
+  .navbar-toggler,
+  .navbar-toggler:focus, 
+  .navbar-toggler:active, 
+  .navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
+    border: 0;
+  }
+  .navbar-toggler {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    transition: .5s ease-in-out;
+    span { @include zero_margin_padding }
+    .toggler_icon {
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      display: block;
+      opacity: 1;
+      border-radius: 10px;
+      transform: rotate(0deg);
+      background: var(--bgl);
+      transition: .25s ease-in-out;
+    }
+    .bar--mid {
+      margin-top: 0;
+      opacity: 0;
+      filter: alpha(opacity=0);
+    }
+    .bar--top { margin-top: 0; transform: rotate(135deg); }
+    .bar--low { margin-top: 0; transform: rotate(-135deg); }
+  } 
+  .navbar-toggler.collapsed {
+    .bar--top { margin-top: -20px; transform: rotate(0deg); }
+    .bar--mid { opacity: 1; filter: alpha(opacity=100); }
+    .bar--low { margin-top: 20px; transform: rotate(0deg); }
+  }
+  #navbarNav {
+    .navbar-nav {
+      margin-left: auto;
+      @include media-breakpoint-down(lg) { text-align: center; }
+      .nav-item {
+        @include media-breakpoint-up(lg) { padding: .3rem 1.5rem; }
+        a { color: var(--txtd); }
+      }
+    }
+  }
+}
+
+.theme_toggle {
+  input[type=checkbox] {
+    visibility: hidden;
+    @include zero_width_height;
+    &:checked + label {
+      background: var(--tint);
+      &::after {
+        left: calc(100% - 5px);
+        transform: translateX(-100%);
+      }
+    }
+  }
+  label {
+    position: relative;
+    width: 52px;
+    height: 27px;
+    margin: .6rem 1rem;
+    border-radius: 100px;
+    background: grey;
+    text-indent: -9999px;
+    cursor: pointer;
+    &::after {
+      content: '';
+      position: absolute;
+      top: 3px;
+      left: 3px;
+      width: 20px;
+      height: 20px;
+      border-radius: 90px;
+      background: white;
+      transition: .3s;
+    }
+  }
+}
