--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -16,6 +16,7 @@
 }
 
 @mixin responsive_fontsize {
+  font-size: 1.9rem;
   @include media-breakpoint-up(sm) { font-size: 2.5rem; }
   @include media-breakpoint-up(md) { font-size: 3.1rem; }
   @include media-breakpoint-up(lg) { font-size: 4.5rem; }
