--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -84,16 +84,16 @@ html {
     &:checked + label {
       background: var(--tint);
       &::after {
-        left: calc(100% - 5px);
+        left: calc(100% - 4px);
         transform: translateX(-100%);
       }
     }
   }
   label {
     position: relative;
-    width: 52px;
-    height: 27px;
-    margin: .6rem 1rem;
+    width: 60px;
+    height: 28px;
+    margin: .4rem;
     border-radius: 100px;
     background: grey;
     text-indent: -9999px;
@@ -101,8 +101,8 @@ html {
     &::after {
       content: '';
       position: absolute;
-      top: 3px;
-      left: 3px;
+      top: 4px;
+      left: 4px;
       width: 20px;
       height: 20px;
       border-radius: 90px;
