--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,10 @@
 /* Main StyleSheet | SCSS > Minified CSS > bundle.js */
 @import "bootstrap";
 @import "mixins";
+@import "navbar";
+@import "theme-toggle";
+@import "centet-xy";
+@import "button";
 
 html {
   --bgl:  #F8F9FA;
@@ -21,132 +25,5 @@ html {
     background-color: var(--bgd);
     h1, h2, h3, h4, h5, h6, p, small { color: var(--txtd); }
     h1 { @include responsive_fontsize; }
-  }
-}
-
-.navbar {
-  .navbar-brand { padding-left: .7rem; color: var(--txtd); }
-  .navbar-toggler,
-  .navbar-toggler:focus, 
-  .navbar-toggler:active, 
-  .navbar-toggler-icon:focus {
-    outline: none;
-    box-shadow: none;
-    border: 0;
-  }
-  .navbar-toggler {
-    position: relative;
-    width: 20px;
-    height: 20px;
-    transition: .5s ease-in-out;
-    span { @include zero_margin_padding }
-    .toggler_icon {
-      position: absolute;
-      left: 0;
-      width: 100%;
-      height: 3px;
-      display: block;
-      opacity: 1;
-      border-radius: 10px;
-      transform: rotate(0deg);
-      background: var(--bgl);
-      transition: .25s ease-in-out;
-    }
-    .bar--mid {
-      margin-top: 0;
-      opacity: 0;
-      filter: alpha(opacity=0);
-    }
-    .bar--top { margin-top: 0; transform: rotate(135deg); }
-    .bar--low { margin-top: 0; transform: rotate(-135deg); }
-  } 
-  .navbar-toggler.collapsed {
-    .bar--top { margin-top: -20px; transform: rotate(0deg); }
-    .bar--mid { opacity: 1; filter: alpha(opacity=100); }
-    .bar--low { margin-top: 20px; transform: rotate(0deg); }
-  }
-  #navbarNav {
-    .navbar-nav {
-      margin-left: auto;
-      @include media-breakpoint-down(lg) { text-align: center; }
-      .nav-item {
-        @include media-breakpoint-up(lg) { padding: .3rem 1.5rem; }
-        a { color: var(--txtd); }
-      }
-    }
-  }
-}
-
-.theme_toggle {
-  input[type=checkbox] {
-    visibility: hidden;
-    @include zero_width_height;
-    &:checked + label {
-      background: var(--tint);
-      &::after {
-        left: calc(100% - 4px);
-        transform: translateX(-100%);
-      }
-    }
-  }
-  label {
-    position: relative;
-    width: 60px;
-    height: 28px;
-    margin: .4rem;
-    border-radius: 100px;
-    background: grey;
-    text-indent: -9999px;
-    cursor: pointer;
-    &::after {
-      content: '';
-      position: absolute;
-      top: 4px;
-      left: 4px;
-      width: 20px;
-      height: 20px;
-      border-radius: 90px;
-      background: white;
-      transition: .3s;
-    }
-  }
-}
-
-.content_center_xy {
-  position: absolute;
-  @include center_xy;
-  small { font-size: 13px; } 
-  p {
-    text-align: right;
-    small { 
-      font-size: 13px;
-      a { 
-        color: var(--txtd);
-        text-decoration: none;
-      }
-    }
-  }
-  .content_center_lg {
-    text-align: left;
-    @include media-breakpoint-up(lg) { text-align: center; }
-  }
-}
-
-.btn_outline_custom {
-  display: inline-block;
-  padding: .6rem 1rem;
-  border: 2px solid var(--txtd);
-  border-radius: 18px;
-  color: var(--txtd);
-  font-size: 15px;
-  text-decoration: none;
-  &:hover {
-    background-color: var(--bgl);
-    color: var(--txtl);
-    transition: .5s ease-in-out;
-  }
-  @include media-breakpoint-up(lg) {
-    padding: .5rem 2rem;
-    font-size: 20px;
   }
 }
